# brainframe-qt

./: .dockerignore  .gitattributes  .gitignore  DISTRIBUTION.rst  LICENSE  README.rst  brainframe_client.py  exclude_paths.txt  hook-pkg_resources.py  include_paths.txt  pyproject.toml  vision_on_wheels.py
.circleci/: config.yml
.github/workflows/: build.pyinstaller.linux.yml
brainframe/shared/: secret.py
brainframe/shared/licenses/: LICENSE.MediaSDK  LICENSE.alsa-lib  LICENSE.aom  LICENSE.at-spi2  LICENSE.ax-pthread  LICENSE.bcrypt  LICENSE.cffi  LICENSE.cryptography  LICENSE.cudnn  LICENSE.gast  LICENSE.glx  LICENSE.gmmlib  LICENSE.grpc  LICENSE.gstreamer-plugins-base  LICENSE.gtk  LICENSE.hdf5  LICENSE.idna  LICENSE.kerberos  LICENSE.lapack  LICENSE.libFLAC  LICENSE.libaec  LICENSE.libavc1394  LICENSE.libbsd  LICENSE.libcelt  LICENSE.libdrm  LICENSE.libepoxy  LICENSE.libicuuc  LICENSE.liblapack  LICENSE.libmpdec  LICENSE.libpng  LICENSE.librtmp  LICENSE.libsoup  LICENSE.libxml2  LICENSE.mpg123  LICENSE.openssl  LICENSE.openvino  LICENSE.opus  LICENSE.paramiko  LICENSE.paranoia  LICENSE.pynacl  (+11 more)
brainframe_qt/: .gitignore  __init__.py
brainframe_qt/api/: __init__.py  api_errors.py  api_stub.py  codecs.py  detection_tracks.py  image_utils.py  openapi.yaml  sorting.py  status_poller.py  status_receiver.py  streaming.py  synced_reader.py  zss_pubsub.py
brainframe_qt/api/codecs/: __init__.py  alarm_codecs.py  base_codecs.py  condition_codecs.py  config_codecs.py  detection_codecs.py  encoding_codecs.py  license_codecs.py  plugin_codecs.py  premises_codec.py  user_codec.py  zone_codecs.py
brainframe_qt/api/identities/: file_tree_identity_finder.py  identity_finder.py
brainframe_qt/api/streaming/: __init__.py  opencv_stream_reader.py  stream_manager.py  stream_proxy.py  synced_reader.py
brainframe_qt/api/stubs/: __init__.py  alarms.py  alerts.py  analysis.py  base_stub.py  encodings.py  engine_configurations.py  identities.py  licenses.py  plugins.py  premises.py  process_image.py  storage.py  streams.py  stub.py  users.py  versions.py  zone_statuses.py  zones.py
brainframe_qt/api_helpers/: __init__.py  zss_pubsub.py
brainframe_qt/api_helpers/identities/: file_tree_identity_finder.py
brainframe_qt/api_helpers/streaming/: __init__.py  stream_manager.py  synced_reader.py
brainframe_qt/api_utils/: __init__.py  connection_manager.py  detection_tracks.py  zss_pubsub.py
brainframe_qt/api_utils/identities/: __init__.py  file_tree_identity_finder.py  identity_finder.py
brainframe_qt/api_utils/streaming/: __init__.py  frame_buffer.py  frame_syncer.py  processed_frame.py  stream_listener.py  stream_manager.py  synced_reader.py  zone_status_frame.py
brainframe_qt/constants/: __init__.py  oauth.py
brainframe_qt/extensions/: __init__.py  activities.py  extensions.py  loader.py
brainframe_qt/legal/: eula.txt  sources.txt
brainframe_qt/legal/licenses/: LICENSE.absl-py  LICENSE.argon2  LICENSE.cairo  LICENSE.cffi  LICENSE.gcc-runtime  LICENSE.gobject-introspection  LICENSE.iconv  LICENSE.icu  LICENSE.krb5  LICENSE.libasyncns  LICENSE.libcom-err  LICENSE.libgdk_pixbuf  LICENSE.libicu67  LICENSE.libicuin65  LICENSE.libmp3lame  LICENSE.libpsl  LICENSE.libraw1394  LICENSE.librtmp  LICENSE.libshout  LICENSE.libva  LICENSE.libvisual  LICENSE.ncurses  LICENSE.openjpeg  LICENSE.orc  LICENSE.theora  LICENSE.uthash
brainframe_qt/licenses/: LICENCE.keyutils  LICENSE.atk  LICENSE.cjson  LICENSE.graphene  LICENSE.jasper  LICENSE.keras-preprocessing  LICENSE.libkeyutils  LICENSE.libxml2  LICENSE.scipy
brainframe_qt/ui/: .gitignore  __init__.py  brainframe_app.py
brainframe_qt/ui/dialogs/: __init__.py  dialog_actions.py
brainframe_qt/ui/dialogs/about_page/: about_page.py  about_page.ui
brainframe_qt/ui/dialogs/alarm_creation/: alarm_creation.py  alarm_creation.ui
brainframe_qt/ui/dialogs/alarm_view/: alarm_view.py  alarm_view.qss  alarm_view_ui.py
brainframe_qt/ui/dialogs/alert_entry_popup/: alert_entry_popup.py  alert_entry_popup.ui
brainframe_qt/ui/dialogs/capsule_configuration/: capsule_config.py  capsule_config.ui  capsule_utils.py  plugin_config.py  plugin_config.ui  plugin_utils.py
brainframe_qt/ui/dialogs/client_configuration/: __init__.py  client_configuration.py  client_configuration.ui
brainframe_qt/ui/main_window/: main_window.py  main_window.qss  main_window.ui  main_window_plugin.py  main_window_ui.py
brainframe_qt/ui/resources/: __init__.py  api_pubsub.py  base_plugin.py  progress_file_reader.py  qt_async_worker.py  qt_resources.qrc  qt_resources.yml  settings.py  stylesheet_watcher.py
brainframe_qt/ui/scripts/: compile_qt_resources.py
brainframe_qt/ui/splash_screen/: splash_screen.py
brainframe_qt/util/: environment.py  events.py  preimport_hooks.py  secret.py
brainframe_qt/util/licensing/: __init__.py  base.py  license_manager.py
brainframe_qt/util/oauth/: base.py  cognito.py  error.py  reply_handler.py
deploy/pyinstaller/: pyinstaller.spec
deployment/pyinstaller/: pyinstaller.spec
deployment/utils/: gstreamer.py  library_licensing.py
package/snap/: Dockerfile  build_snap.py
package/snap/snap/: snapcraft.yaml
scripts/: compile_qt_resources.py
snap/: snapcraft.yaml
snap/gui/: brainframe-client.desktop
ui/dialogs/alarm_creation/: alarm_creation.py  alarmcreationplugin.py
ui/dialogs/stream_configuration/: stream_configuration.py  stream_configuration_plugin.py
ui/main_window/toolbar/: toolbar.py  toolbar_plugin.py
ui/main_window/video_thumbnail_view/: video_thumbnail_view.py  video_thumbnail_view_plugin.py
ui/resources/: __init__.py  base_plugin.py
visionapp/api/: api.py  data_structures.py
visionapp/client/: __init__.py  build_frontend.spec  client_paths.py
visionapp/client/api/: __init__.py  api.py  api_stub.py  codecs.py  data_structures.py  streaming.py
visionapp/client/tests/: test_data_structures.py
visionapp/client/ui/: main.py  main.ui
visionapp/client/ui/dialogs/: __init__.py
visionapp/ui/: main.py
visionapp/ui/main_window/: main.ui
visionapp/ui/resources/: base_plugin.py  flow_layout.py
(+505 files in other folders)
