[tool.poetry]
name = "brainframe"
version = "0.27.0"
description = "BrainFrame"
authors = ["Aotu"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.6"
vcap = { version = "0.2.4.dev3", optional = true }
vcap-utils = { version = "0.2.3.dev3", optional = true }
cherrypy = { version = "^18.6.0", optional = true }
falcon = { version = "^2.0.0", optional = true }
falcon-multipart = { version = "^0.2.0", optional = true }
peewee = { version = "^3.13.3", optional = true }
psycopg2-binary = { version = "^2.8.5", optional = true }
argon2-cffi = { version = "^20.1.0", optional = true }
watchdog = { version = "^0.10.3", optional = true }
cryptography = { version = "^3.0", optional = true }
pyyaml = { version = "^5.3.1", optional = true }
py-openapi-schema-to-json-schema = { version = "^0.0.3", optional = true }
jsonschema = { version = "^3.2.0", optional = true }
# Windows is locked to 1.16, due to gcc version on windows being 8.3. https://github.com/numpy/numpy/issues/14787
# However, using markers and sys_platform doesn't work because of https://github.com/python-poetry/poetry/pull/2342
# So. Once poetry fixes it's recursion error and once we update gcc on windows builds, we can bump numpy
# We are using python versions as a workaround for the poetry issue, since the windows build _happens_ to use 3.7
numpy = [
    { version = "~1.16", python = "~3.7" },
    { version = "^1.16", python = "~3.6" },
]

shapely = "1.6.4"  # Because our windows build requires 1.6.4.post2
ujson = "^1.35"
requests = "^2.23.0"
python-dateutil = "^2.8.1"
# https://github.com/pypa/setuptools/issues/1694
# https://github.com/GNOME/pygobject/blob/7d5f4cd41ee0221c13842ab6323b7a016df02c7e/pyproject.toml
# 3.36 is broken
PyGObject = "~3.34.0"
readerwriterlock = "^1.0.6"
pycryptodomex = "^3.9.6"

cython = "^0.29.21"

tabulate = "^0.8.7"
# Match build environment
opencv-python-headless = { version = "^4.4.0", optional = true }

brainframe-api = { version = "~0.26", optional = true }
pendulum = { version = "^2.0.5", optional = true }

pyqt5ac = { version = "^1.1.0", optional = true }
pyinstaller = { version = "^3.6", optional = true }

[tool.poetry.dev-dependencies]
brainframe-api = "brainframe-api"
pytest = "^6.0.1"
mock = "^4.0.2"
fabrisnake = { git = "ssh://git@bitbucket.org/teamdll/fabrisnake.git", rev = "v0.10.4" }

[tool.poetry.extras]
server = [
    "vcap",
    "vcap-utils",
    "cherrypy",
    "falcon",
    "falcon-multipart",
    "peewee",
    "psycopg2-binary",
    "argon2-cffi",
    "watchdog",
    "cryptography",
    "pyyaml",
    "py-openapi_schema_to_json_schema",
    "jsonschema",
    "opencv-python-headless"
]
build = [
    "cython"
]
build_downloads = [
    "vcap",
    "vcap-utils",
    "tabulate",
    "opencv-python-headless"
]
client = [
    "brainframe-api",
    "pendulum",
    "numpy",
    "shapely",
    "ujson",
    "requests",
    "python-dateutil",
    "PyGObject",
    "readerwriterlock",
    "pycryptodomex"
]

# Separate from client_build because pyqt5ac brings in the wrong PyQt5 version
client_res_build = [
    "pyqt5ac"
]
client_build = [
    "pyinstaller"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
