[tool.poetry]
name = "brainframe-qt"
version = "0.28.0"
description = "Official BrainFrame client"
authors = ["Aotu"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.6"
brainframe-api = "0.27.0"
# Windows is locked to 1.16, due to gcc version on windows being 8.3. https://github.com/numpy/numpy/issues/14787
numpy = [
    { version = "1.16.5", markers = "sys_platform == 'win32'"},
    { version = "^1.16", markers = "sys_platform == 'linux'"},
]
shapely = "1.6.4"  # Because our windows build requires 1.6.4.post2
ujson = "^1.35"
requests = "^2.23.0"
python-dateutil = "^2.8.1"
# https://github.com/pypa/setuptools/issues/1694
# https://github.com/GNOME/pygobject/blob/7d5f4cd41ee0221c13842ab6323b7a016df02c7e/pyproject.toml
# 3.36 is broken
PyGObject = "~3.34.0"
readerwriterlock = "^1.0.6"
pycryptodomex = "^3.9.6"
pendulum = "^2.0.5"
dataclasses = { version = "^0.7", python = ">=3.6,<3.7" }
gstly = { git = "git@github.com:aotuai/gstly.git", rev = "fc0bb63" }
pubsus = { git = "https://github.com/aotuai/pubsus.git", branch = "main" }

pyqt5ac = { version = "^1.1.0", optional = true }
pyinstaller = { version = "^3.6", optional = true }

[tool.poetry.dev-dependencies]
pyqt5 = "^5.15.0"
pyqt5-stubs = { git = "ssh://git@github.com/stlehmann/PyQt5-stubs.git", branch = "master" }
pyqt5ac = "^1.2.1"

[tool.poetry.extras]
# Separate from client_build because pyqt5ac brings in the wrong PyQt5 version
client_res_build = [
    "pyqt5ac"
]
client_build = [
    "pyinstaller"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
