[tool.poetry]
name = "brainframe-qt"
version = "0.30.0"
description = "Official BrainFrame client"
authors = ["Aotu"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.6.2"
brainframe-api = "^0.28.2"
# Windows is locked to 1.16, due to gcc version on windows being 8.3. https://github.com/numpy/numpy/issues/14787
numpy = [
    { version = "1.16.5", markers = "sys_platform == 'win32'" },
    { version = "^1.16", markers = "sys_platform == 'linux'" },
]
shapely = "^1.7.1"
requests = "^2.23.0"
python-dateutil = "^2.8.1"
# https://github.com/pypa/setuptools/issues/1694
# https://github.com/GNOME/pygobject/blob/7d5f4cd41ee0221c13842ab6323b7a016df02c7e/pyproject.toml
# 3.36 is broken
PyGObject = "~3.34.0"
readerwriterlock = "^1.0.6"
pycryptodomex = "^3.9.6"
pendulum = "^2.0.5"
dataclasses = { version = "^0.7", python = ">=3.6,<3.7" }
gstly = [
    { version = "^0.3.2", platform = 'linux' },
    { version = "^0.3.2", platform = 'windows', optional = true },
]

pyqt5ac = { version = "^1.1.0", optional = true }
pyinstaller = { version = "^4.1", optional = true }
PyQtNetworkAuth = "5.15.3"
PyQt5-sip = "12.8.0"

[tool.poetry.dev-dependencies]
pyqt5 = "^5.15.0"
pyqt5-sip = "^12.8.0"
pyqt5-stubs = "^5.15.0"
pyqt5ac = "^1.2.1"
docker = "^4.4.1"
# For Restructured files in PyCharm
pygments = "*"

[tool.poetry.extras]
build = ["pyinstaller"]
# Separate from build because pyqt5ac brings in the wrong PyQt5 version
resource_build = ["pyqt5ac"]
windows = ["gstly"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
